Custom Scrollbar, Console Fixes, Colour Palette
- Added custom scrollbar
- Removed redundant console logging
- Tweaked colours to fit Pubs' selected colour palette

--- a/Event Doc/css/main.css
+++ b/Event Doc/css/main.css
@@ -102,7 +102,7 @@ section p {
 
 
 .left-sidebar {
-    background-color: #FF4533;
+    background-color: #d66c44;
     float: left;
     min-height: 100%;
     position: fixed;
